refactor: LiteratureCategoryController